app/src/main/java/com/example/windows/data/models/errors/RegisterRequest.kt
package com.example.windows.data.models.errors

data class RegisterRequest(val login: String, val password: String, val name: String)